<resources>
    <string name="app_name">MyBookshelf 1.0</string>
    <string name="MyBookshelf">MyBookshelf</string>
    <string name="email" />
    <string name="senha" />
    <string name="entrar" />
    <string name="cadastrar" />
    <string name="login">LOGIN</string>
    <string name="editTextEmail">Email</string>
    <string name="editTextSenha">Senha</string>
    <string name="editTextCadastro">CADASTRO</string>
    <string name="cadastro" />
    <string name="TextViewSenha">Senha</string>
    <string name="TextViewEmail">Email</string>
    <string name="TextViewTitle">Login</string>
    <string name="TextViewMybookshelf">MyBookshelf</string>
    <string name="bCadastro">CADASTRO</string>
    <string name="bEmail">LOGIN</string>
    <string name="buttonEntrar">ENTRAR</string>
    <string name="digite_sua_senha">Digite sua senha</string>
    <string name="digite_seu_e_mail">Digite seu e-mail</string>
    <string name="image_from_camera" />
    <string name="take_picture" />
    <string name="btnAdicionar">Adicionar Livro</string>
    <string name="button_to_add_new_book">Button to add new book</string>
    <string name="button">Button</string>
    <string name="bGaleria" />
    <string name="galeria">GALERIA</string>
    <string name="tirar_foto">TIRAR FOTO</string>
    <string name="buttonGaleria" />
    <string name="book_title">Book Title</string>
    <string name="add_new_book">TODO</string>
    <string name="text_cadastro">Cadastro</string>
    <string name="text_email">Email</string>
    <string name="text_senha">Senha</string>
    <string name="button_cadastrar">CADASTRAR</string>
    <string name="titulo_book">Titulo</string>
    <string name="categoria_book">Categoria</string>
    <string name="opiniao_book">Opiniao</string>
    <string name="add_image">TODO</string>
    <string name="button_ver_livros">Ver livros</string>
</resources>